# QA-Agents

./: .gitignore  README.md  README_VISUAL_AGENT.md  pyproject.toml  setup.py
examples/: DEMO_README.md  comprehensive_demo.py  sample_app.html  self_healing_demo.py  visual_agent_example.py
examples/demo_reference_output/: README.md  dashboard_baseline_sample.txt  dashboard_diff_sample.txt  demo_report.html  demo_results.json
mindmarionette/: __init__.py
mindmarionette/agent_framework/: __init__.py  base.py
mindmarionette/agents/: __init__.py  visual.py
mindmarionette/orchestrator/: __init__.py  workflow.py
mindmarionette/reporting/: __init__.py  pipeline.py
mindmarionette/self_healing/: __init__.py  engine.py
mindmarionette/visual_verification/: __init__.py  core.py
tests/: test_orchestrator_integration.py  test_self_healing_engine.py  test_visual_agent.py  test_visual_verification_core.py
